--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 ---
-
+<style type="text/css">
+  .page-heading {
+    background-image: url("/soma-cultura/assets/img/red-flowers-top-left");
+    background-position: left;
+    background-size: cover;
+  }
+</style>
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
