--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <style type="text/css">
-  .home {
+  .site-header {
     background-image: url("/soma-cultura/assets/img/red-flowers-top-left");
     background-position: left;
     background-size: cover;
