--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,7 +4,8 @@
  .site-header {
     background-image: url("/soma-cultura/assets/img/red-flowers-top-left.png");
     background-position: left;
-    background-size: cover;
+    background-size: 40%;
+    background-repeat: no-repeat;
     position: fixed;
     width: 100%;
     min-height: $spacing-unit * 1.865;
@@ -17,7 +18,7 @@
   
   .site-title {
     @include relative-font-size(1.625);
-    font-weight: 300;
+    font-weight: 500;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
