--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,13 +1,22 @@
 ---
 layout: default
 ---
-
+<style type="text/css">
+    .page-content {
+        background-image: url("/soma-cultura/assets/img/red-flowers-top-right.png");
+        background-position: top right;
+        background-size: 350px;
+        background-repeat: no-repeat;
+        padding-top: 80px;
+        padding-right: 80px;
+    }
+</style>
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {{ content }}
-
 
 </div>
+
+{{ content }}
