--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,10 +5,17 @@ layout: default
     .page-content {
         background-image: url("/soma-cultura/assets/img/red-flowers-top-right.png");
         background-position: top right;
+        background-size: 550px;
+        background-repeat: no-repeat;
+        padding-top: 150px;
+        padding-right: 150px;
+    }
+    .site-footer {
+        background-image: url("/soma-cultura/assets/img/blue-flowers-bottom-right.png");
+        background-position: bottom right;
         background-size: 350px;
         background-repeat: no-repeat;
-        padding-top: 80px;
-        padding-right: 80px;
+        padding-right: 150px;
     }
 </style>
 <div class="home">
