--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}"><img src="/soma-cultura/assets/img/logo-with-text-cropped.png" alt="{{ my_page.title | escape }}"></a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
@@ -32,7 +32,7 @@
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}"><img src="/soma-cultura/assets/img/logo-with-text-cropped.png" alt="{{ my_page.title | escape }}"></a>
+            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
