try splash at top

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,12 @@
 layout: default
 ---
 <style type="text/css">
-    .page-content {
-        background-image: url("/soma-cultura/assets/img/red-flowers-top-right.png");
-        background-position: top right;
-        background-size: 550px;
+    .splash {
+        background-image: url("/soma-cultura/assets/img/beach.jpg");
+        background-position: center;
+        width: 100%;
+        height: 400px;
         background-repeat: no-repeat;
-        padding-top: 150px;
-        padding-right: 150px;
     }
     .site-footer {
         background-image: url("/soma-cultura/assets/img/blue-flowers-bottom-right.png");
@@ -23,6 +22,9 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+
+</div>
+<div class="splash">
 
 </div>
 
