try splash at top

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <style type="text/css">
-    .splash {
+    .page-content {
         background-image: url("/soma-cultura/assets/img/beach.jpg");
         background-position: center;
         width: 100%;
@@ -22,9 +22,6 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-
-</div>
-<div class="splash">
 
 </div>
 
