try splash at top

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,11 @@ layout: default
         height: 400px;
         background-repeat: no-repeat;
     }
+    .content-box {
+        background-color: rgba(0, 0, 0, 0.5); 
+        padding: 20px;
+        color: white;
+    }
     .site-footer {
         background-image: url("/soma-cultura/assets/img/blue-flowers-bottom-right.png");
         background-position: bottom right;
@@ -25,4 +30,6 @@ layout: default
 
 </div>
 
+<div class="content-box">
 {{ content }}
+</div>
