--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
         background-color: rgba(0, 0, 0, 0.5); 
         padding: 20px;
         color: white;
-        border-radius: 25pxs;
+        border-radius: 25px;
     }
     .site-footer {
         background-image: url("/soma-cultura/assets/img/blue-flowers-bottom-right.png");
